# bearsplate

./: .appveyor.yml  .travis  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  bearsplate-ut.cpp  bearsplate.cpp  bearsplate.hpp  main-win32.cpp  main.cpp
